--- a/src/styles/iview-ui.css
+++ b/src/styles/iview-ui.css
@@ -4,3 +4,17 @@
   line-height:30px;
   padding-left:10px;
 }
+
+
+.ivu-table-footer {
+	border-top: 1px solid rgb(215,221,228);
+	line-height: 48px;
+}
+
+.ivu-btn {
+	margin-left:10px;
+}
+
+.ivu-input-icon {
+	line-height: 48px;
+}
