完善角色管理

--- a/src/styles/iview-ui.css
+++ b/src/styles/iview-ui.css
@@ -16,8 +16,8 @@
 }
 
 .ivu-modal-body {
-	padding-left:35px;
-	padding-right:45px;
+	/*padding-left:35px;*/
+	/*padding-right:45px;*/
 }
 
 .ivu-table-fixed-right {
